--- a/01-hola-mundo.html
+++ b/01-hola-mundo.html
@@ -160,14 +160,34 @@
                 commodi quam reiciendis itaque, expedita iusto magni eligendi, optio excepturi! Placeat itaque hic
                 provident sequi unde!</p>
         </div>
-
+        <!-- 
         <div
             style="background-image: url(./imagenes/cabecera.gif); width: 800px; height: 129px; margin: auto; overflow: hidden;">
-            <h1 style="background-color: rgba(10, 10, 75, 0.712); width: 200px; height: 50px ; margin-bottom: auto;">
-                CABECERA
-            </h1>
+            hhh</div> -->
 
+        <div
+            style="background-image: url(./imagenes/bg-2.jpg); width: 700px; height: 571px; margin: auto; overflow: hidden;">
+            <p style="width: 200px; margin-top: 50px; margin-left: 20px; display: inline-block; vertical-align: top; ">
+                Lorem ipsum dolor, sit
+                amet consectetur
+                adipisicing elit. Quas
+                architecto ab modi dicta velit officiis animi nisi, ad ratione excepturi maiores consequatur omnis quasi
+                incidunt, sit quibusdam eum, consectetur exercitationem!</p>
+            <p style="width: 200px; margin-top: 50px; margin-left: 50px; display: inline-block; vertical-align: top; ">
+                Lorem ipsum dolor, sit
+                amet consectetur
+                adipisicing elit. Quas
+                architecto ab modi dicta velit officiis animi nisi, ad ratione excepturi maiores consequatur omnis quasi
+                incidunt, sit quibusdam eum, consectetur exercitationem!</p>
+            <p style="width: 160px; margin-top: 50px; margin-left: 40px; display: inline-block; vertical-align: top; ">
+                Lorem ipsum dolor, sit
+                amet consectetur
+                adipisicing elit. Quas
+                architecto ab modi dicta velit officiis an
+                imi nisi, ad ratione excepturi maiores consequatur omnis quasi
+                incidunt, sit quibusdam eum, consectetur exercitationem!</p>
 
+        </div>
 
 
 
